--- a/views/admin/editproduct.ejs
+++ b/views/admin/editproduct.ejs
@@ -133,17 +133,17 @@
                     <form method="post" action="/admin/edit-product/<%= product._id %>" enctype="multipart/form-data" id="productForm">
                         <div>
                           <label for="productName" class="form-label">Product Name</label>
-                          <input type="text" class="form-control" id="productName" name="name" placeholder="Enter product name" value="<%= product.name %>" required>
+                          <input type="text" class="form-control" id="productName" name="name" placeholder="Enter product name" value="<%= product.name %>" >
                           <div class="invalid-feedback"></div>
                         </div>
                         <div>
                           <label for="productDescription" class="form-label">Product Description</label>
-                          <textarea class="form-control" id="productDescription" name="description" placeholder="Enter product description" required><%= product.description %></textarea>
+                          <textarea class="form-control" id="productDescription" name="description" placeholder="Enter product description" ><%= product.description %></textarea>
                           <div class="invalid-feedback"></div>
                         </div>
                         <div>
                             <label for="productMedia" class="form-label">Product Media</label>
-                            <input type="file" class="form-control-file" id="productMedia" name="media" multiple required>
+                            <input type="file" class="form-control-file" id="productMedia" name="media" multiple >
                             <div class="invalid-feedback"></div>
                           </div>
                         <div>
