--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -79,13 +79,16 @@
  <div id="otp-container">
    <h2>Secure OTP Verification</h2>
    <form id="otp-form"  method="post" action="/otp" >
+    <% if (typeof errorMessage !== 'undefined') { %>
+      <p id="error-message" style="color: red;"><%= errorMessage %></p>
+  <% } %>
      <input name="otp" type="text" id="otp-input" placeholder="Enter OTP"  maxlength="6" required>
      <br>
      <button type="submit" id="submit-btn">Verify OTP</button>
      <button type="button" id="resend-btn" onclick="resendOTP()" disabled>Resend OTP</button>
    </form>
    <p id="timer">Timer: 60 seconds</p>
-   <p id="error-message"></p>
+   <!-- <p id="error-message"></p> -->
  </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -216,7 +219,7 @@
     //         body: JSON.stringify({ enteredOtp: otp })
     //     })
     //     .then(response => {
-    //         console.log(response);
+    //       document.getElementById('error-message').textContent =response.error
     //         if (!response.ok) {
     //             throw new Error('Network response was not ok');
     //         }
