--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -54,7 +54,9 @@
                                                 <span>$<%= (item.productId.price * item.quantity).toFixed(2) %></span>
                                             </td>
                                             <td class="action" data-title="Remove">
-                                                <a href="#" class="text-muted"><i class="fi-rs-trash"></i></a>
+                                            <a href="#" class="text-muted" onclick="removeQuantity('<%= cart._id %>', '<%= item.productId.id %>')">
+                                                    <i class="fi-rs-trash"></i>
+                                                </a>
                                             </td>
                                         </tr>
                                     <% }) %>
@@ -472,6 +474,48 @@
   }
 </script>
 
+<script>
+    function removeQuantity(cartId, productId) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "Do you want to remove this product from your cart?",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, remove it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                fetch('/remove-quantity', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        cartId: cartId,
+                        productId: productId
+                    })
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        Swal.fire('Error', data.error, 'error');
+                    } else {
+                        Swal.fire('Removed!', data.message, 'success')
+                            .then(() => {
+                                location.reload();
+                            });
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    Swal.fire('Error', 'Failed to remove product', 'error');
+                });
+            }
+        });
+    }
+    </script>
+    
     
 <%- include('../partials/footercopy') %>
 <%- include('../partials/footer') %>
